Fixed footer, appetizer, and drinks resizing on mobile

--- a/Menu_Pages/Appetizer.CSS
+++ b/Menu_Pages/Appetizer.CSS
@@ -37,30 +37,24 @@ hr {
 }
 
 .menu {
-    padding: 5%;
-    /* background-color: rgba(255, 255, 255, 1); */
+    padding: 7%;
 }
 
 .recommendation {
     padding: 5%;
     color: rgb(255, 255, 237);
     background-color: rgba(56, 56, 56, 1);
-    /* width: 40%; */
 }
 
 p {
     font-weight: bold;
     font-size: 24px;
     line-height: 28px;
+    padding-bottom: 12px;
 }
 
 .price {
     float: right;
-}
-
-.items {
-    float: center;
-    padding-top: 5%;
 }
 
 .line {
@@ -77,7 +71,6 @@ p {
     margin-right: auto;
 }
 
-
 h3 {
     text-align: center;
 }
@@ -89,16 +82,21 @@ p.normal {
     font-weight: normal;
 }
 
-input {
-    width: 70px;
-    height: 37px;
-    position: relative;
-    top: 30px;
-    left: 1000px;
-    color: rgba(207, 191, 135, 1);
-    background-color: rgba(49, 70, 85, 1);
-}
+@media screen and (max-width: 500px) {
+    p {
+        font-weight: bold;
+        font-size: 15px;
+        line-height: 18px;
+        padding-bottom: 6px;
+    }
 
-.sidebar {
-    width: 45%
+    h1 {
+        font-size: 30px;
+    }
+
+    .recommendation {
+        padding: 10%;
+        color: rgb(255, 255, 237);
+        background-color: rgba(56, 56, 56, 1);
+    }
 }
