--- a/Menu_Pages/Footer.CSS
+++ b/Menu_Pages/Footer.CSS
@@ -74,3 +74,15 @@ iframe {
 #address {
     text-align: center;
 }
+
+@media screen and (max-width: 500px) {
+    h1 {
+        font-size: 30px;
+    }
+
+    h5 {
+        color: white;
+        font-size: 20px;
+        line-height: 18px;
+        padding-bottom: 30px;
+}
